# bg3se

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  setup.sh
CustomScripts/: MacOSHookFramework.cpp
SymbolTableGenerator/: EnhancedVtableScanner.cpp  RuntimePatternEnhancer.cpp  TargetedVTableScanner.cpp  VTableGenerator.cpp  VTableScanner.cpp
